# ModuleTemplate

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: FractalAPI.hpp.07D0974D401947C3.idx  FractalAPI.hpp.FCB06E2A6512DB66.idx  module.cpp.1612A0F104824B28.idx  module.cpp.38121C5D5FB13F48.idx
scripts/: build-windows-mingw.sh  build.sh
src/: module.cpp
src/headers/: FractalAPI.hpp  FractalAPI_gateway.h  FractalAPI_wrapper.h  FractalCORE_gateway.h  FractalCORE_wrapper.h  Structs&Classes.h
